# harper

./: Cargo.toml  justfile
harper-cli/: Cargo.toml
harper-cli/src/: main.rs
harper-core/: Cargo.toml  affixes.json  dictionary.dict
harper-core/src/: word_metadata.rs
harper-core/src/linting/: boring_words.rs  lint_group.rs  matcher.rs  spell_check.rs  spelled_numbers.rs  use_genitive.rs
harper-core/src/patterns/: invert.rs  mod.rs
harper-core/tests/: run_tests.rs
harper-core/tests/test_sources/: issue_267.md
harper-ls/: Cargo.toml
harper-wasm/: Cargo.toml
harper-wasm/src/: lib.rs
