[package]
name = "mdx-lint"
version = "0.7.0"
edition = "2021"
private = true
publish = false
repository = "https://github.com/stubbycms/mdx-lint"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.91"
harper-core = { path = "../harper-core", version = "0.12.0", features = [
    "concurrent",
] }
once_cell = "1.19.0"
serde-wasm-bindgen = "0.6.5"
regex = "1.5.4"
unicode-segmentation = "1.10.0"
